# HyperionTextEditor

./: .gitignore  README.md  hyper.gresource.xml  main.c  meson.build  meson_compile.sh  ms.gschema.xml  preferences.ui  setup.sh  update_schema_and_resources.sh  window.ui
include/: hyper_app.h  hyper_app_prefs.h  hyper_app_win.h
src/: hyper_app.c  hyper_app_prefs.c  hyper_app_win.c  resources.c
styles/: application.css
ui/: gears-menu.ui  menubar.ui
